# salary-calc-fullstack

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend.yml
backend/: README.md  pyproject.toml  requirements.txt  setup.py
backend/salary_calc_fastapi/: app.py  setup.cfg
backend/salary_calc_fastapi/data/: __init__.py  rates_and_thresholds.py
backend/salary_calc_fastapi/endpoints/: hello_world.py  salary_calculation.py
backend/salary_calc_fastapi/helpers/: marginal_helpers.py
backend/salary_calc_fastapi/models/: date.py  income_tax.py  national_insurance.py  pension.py  salary.py  salary_request.py  salary_response.py  student_loan.py
backend/salary_calc_fastapi/tests/endpoints/: test_hello_world.py  test_salary_calculation.py
backend/salary_calc_fastapi/tests/models/: test_income_tax.py  test_national_insurance.py  test_pension.py  test_salary.py  test_student_loan.py
backend/salary_calc_fastapi/tests/utils/: test_classes.py
frontend/: hello_world.html  home.html  nginx.conf  package-lock.json  package.json
frontend/html/: home.html
frontend/src/: date.ts  hello_world.ts  helpers.ts  main.ts  request.ts  response.ts  types.ts
frontend/styles/: index.css  styles.css
